@startuml

title __INTERCEPTOR's Class Diagram__\n

  package  {
    package prototypes.interceptor {
      class Application {
          + LogIn()
          + LogOut()
      }
    }
  }
  

  package  {
    package prototypes.interceptor {
      class ConcreteFrameWork {
          {static} + main()
      }
    }
  }
  

  package  {
    package prototypes.interceptor {
      class ConcreteInterceptor {
          - DetailsOfLogin : ArrayList<String>
          - DetailsOfLogout : ArrayList<String>
          {static} - interceptorAction : ConcreteInterceptor
          - ConcreteInterceptor()
          {static} + getInstanceOfInterceptorAction()
          + preRequest()
          + postRequest()
      }
    }
  }
  

  package  {
    package prototypes.interceptor {
      class Context {
          - timeOccurred : long
          - userName : String
          ~ Context()
          + getTimeOccurred()
          + getUserName()
      }
    }
  }
  

  package  {
    package prototypes.interceptor {
      class Dispatcher {
          - Interceptors : ArrayList<Interceptor>
          {static} - thisDispatcher : Dispatcher
          - Dispatcher()
          + preRequest()
          + postRequest()
          + registerDispatcher()
          + removerDispatcher()
          {static} + getInstanceOfDispatcher()
      }
    }
  }
  

  package  {
    package prototypes.interceptor {
      interface Interceptor {
          {abstract} + preRequest()
          {abstract} + postRequest()
      }
    }
  }
  

  ConcreteInterceptor -up-|> Interceptor
  Dispatcher -up-|> Interceptor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
